force-app/main/default/objects/custom_create168__c/custom_create168__c.object-meta.xml
<CustomObject>
    <label>Custom created object168</label>
    <nameField>
        <label>Custom created field</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Custom created objects168</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>