force-app/main/default/objects/custom_create168__c/fields/custom_create_168field526__c.field-meta.xml
<CustomField>
    <fullName>custom_create_168field526__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Custom created 168field526</label>
    <type>Checkbox</type>
</CustomField>